[package]
name = "todo-yew"
version = "0.1.0"
edition = "2021"

[lib]
name = "app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-console = "0.2.3"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.64", features = ["console", "Event", "Window", "Storage"] }
yew = { version = "0.20.0", features = ["csr"] }
